# micvol

./: .gitignore  Cargo.toml  LICENSE-MIT  Micvol.podspec  README.md  README_CN.md
demo/MicvolDemo/: project.yml
demo/MicvolDemo/MicvolDemo/: ContentView.swift  MicvolBridge.swift  MicvolDemo-Bridging-Header.h  MicvolDemoApp.swift
demo/MicvolDemo/MicvolDemo.xcodeproj/: project.pbxproj
examples/: list_devices.rs  normalize.rs
include/: micvol.h
scripts/: build_release.sh
src/: coreaudio.rs  error.rs  ffi.rs  guard.rs  lib.rs  manager.rs  types.rs
